# LP_I

./: README.md
EDB_I/: .gitignore
atividade_I/questao_2/: CMakeLists.txt
atividade_I/questao_2/include/: Animal.h  Zoo.h  utilities.h
atividade_I/questao_2/src/: Animal.cpp  Zoo.cpp  main.cpp  utilities.cpp
atividade_I/questao_3/: CMakeLists.txt
atividade_I/questao_4/: CMakeLists.txt
atividade_I/questao_5/: CMakeLists.txt  main.cpp
concordo/: CMakeLists.txt  Documentação  README.md  command.in  memTest.txt
concordo/data/: servers.txt  users.txt
concordo/include/: channel.h  channelText.h  channelVoice.h  message.h  server.h  system.h  user.h  utilities.h
concordo/src/: channel.cpp  channelText.cpp  channelVoice.cpp  main.cpp  message.cpp  server.cpp  system.cpp  user.cpp
menu_musicas/: .gitignore  CMakeLists.txt  README.md  project.conf
menu_musicas/html/: Lista_8hpp.html  Lista_8hpp_source.html  No_8hpp_source.html  Playlist_8hpp_source.html  a00002_source.html  a00005.html  a00005_source.html  a00008_source.html  a00011_source.html  a00014.html  a00014_source.html  a00024.html  a00028.html  a00032.html  a00036.html  annotated.html  classLista.html  classNo.html  classPlaylist.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_rela.html  globals.html  globals_func.html  index.html  menudata.js  utilities_8hpp.html  utilities_8hpp_source.html
menu_musicas/include/: Lista.hpp  Musica.hpp  No.hpp  Playlist.hpp  utilities.hpp
menu_musicas/latex/: a00005.tex  a00014.tex  (+11 more)
(+134 files in other folders)
